INFS2101 - Project - Fix Spacing

--- a/Year 2/INFS 2101/Project/css/style.css
+++ b/Year 2/INFS 2101/Project/css/style.css
@@ -446,7 +446,7 @@ input[type="checkbox"] {
 .faq-questions p {
     font-size:22px;
     margin-left:30px;
-    padding:10px;
+    padding:15px;
     border-left: 3px solid #a10bcb;
     background-color: rgb(27, 27, 27);
 }
